--- a/gb/20/8/3/n12303353.md
+++ b/gb/20/8/3/n12303353.md
@@ -1,61 +1,66 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xdbxou357/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xdbxou357/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xdbxou357/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xdbxou357/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xdbxou357/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xdbxou357/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xdbxou357/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xdbxou357/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xdbxou357/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xdbxou357/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xdbxou357/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xdbxou357/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xdbxou357/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xdbxou357/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xdbxou357/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xdbxou357/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xdbxou357/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xdbxou357/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xdbxou357/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xdbxou357/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xdbxou357/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xdbxou357/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xdbxou357/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台积电与美企紧密合作 外媒：美国将保护台湾</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/d8e31b7be6bcf2a610e49fbbf01133e6-600x400.jpg" />
 <h6>台湾的营所税申报6月底截止，年缴税冠军仍由台积电蝉联，贡献整体营所税一成。（中央社）
 </h6>
 <hr>
-<p>【大纪元2020年08月03日讯】（大纪元记者张原彰<ahref="https://github.com/xdbxou357/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>台北报导）<ahref="https://github.com/xdbxou357/djy/blob/master/gb/tag/%E5%8F%B0%E7%A7%AF%E7%94%B5.md#1">台积电</a>是纯晶片代工厂，包括：辉达（Nvidia）、高通（Qualcomm）和超微半导体（AMD）等<ahref="https://github.com/xdbxou357/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>企业都是台积电的客户，据国外媒体报导，台湾的半导体产业实力被称为“硅盾”（Silicon Shield），地位相当于美国第51州，美国无法承受台湾输给中共带来的产业影响，因此也将持续保护台湾。</p>
-<p>英国《金融时报》报导，<ahref="https://github.com/xdbxou357/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>在全球晶片业中具有领先地位，但是美国晶片的制造比率仅12%，多数是发展晶片设计，而在美中贸易战、科技战下，美国近期也将特别保护自己的晶片产业链。</p>
-<p>报导引述美国半导体行业调查公司VLSI Research董事长兼长期晶片分析师Dan Hutcheson的看法，认为辉达、高通和AMD等美国企业，都是<ahref="https://github.com/xdbxou357/djy/blob/master/gb/tag/%E5%8F%B0%E7%A7%AF%E7%94%B5.md#1">台积电</a>的晶片客户，而<ahref="https://github.com/xdbxou357/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>的半导体产业链有着硅盾实力，地位相当于美国的第51州。</p>
-<p>中共面对国际间的威胁，使得台海情势时而紧张，Dan Hutcheson认为，台湾除了是抵御中共侵略的最佳防御手段之外，由于台湾的半导体产业与美国紧密连结，美国承受不起台湾输给中共的风险，因此也将保护台湾免受中共威胁。</p>
-<p>该报导指出，由于美中持续冲突，美国依赖其他亚洲国家制造晶片背后存在风险，美国国会正努力推动晶片“美国制造”，补贴是其中的措施之一。台积电在今年5月宣布，将在美国亚利桑那州建厂，该厂则得到州政府和美国联邦政府的支持。</p>
+<p>【大纪元2020年08月03日讯】（大纪元记者张原彰<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>台北报导）<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E7%A7%AF%E7%94%B5.md#1">台积电</a>是纯晶片代工厂，包括：辉达（Nvidia）、高通（Qualcomm）和超微半导体（AMD）等<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>企业都是台积电的客户，据国外媒体报导，台湾的半导体产业实力被称为“硅盾”（Silicon Shield），地位相当于美国第51州，美国无法承受台湾输给中共带来的产业影响，因此也将持续保护台湾。</p>
+<p>英国《金融时报》报导，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>在全球晶片业中具有领先地位，但是美国晶片的制造比率仅12%，多数是发展晶片设计，而在美中贸易战、科技战下，美国近期也将特别保护自己的晶片产业链。</p>
+<p>报导引述美国半导体行业调查公司VLSI Research董事长兼长期晶片分析师丹·哈奇森（Dan Hutcheson）的看法，认为辉达、高通和AMD等美国企业，都是<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E7%A7%AF%E7%94%B5.md#1">台积电</a>的晶片客户，而<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>的半导体产业链有着硅盾实力，地位相当于美国的第51州。</p>
+<p>中共面对国际间的威胁，使得台海情势时而紧张，丹·哈奇森认为，台湾除了是抵御中共侵略的最佳防御手段之外，由于台湾的半导体产业与美国紧密连结，美国承受不起台湾输给中共的风险，因此也将保护台湾免受中共威胁。</p>
+<p>该报导指出，由于美中持续冲突，美国依赖其它亚洲国家制造晶片背后存在风险，美国国会正努力推动晶片“美国制造”，补贴是其中的措施之一。台积电在今年5月宣布，将在美国亚利桑那州建厂，该厂则得到州政府和美国联邦政府的支持。</p>
 <h2>台积电营所税300亿 蝉联冠军</h2>
-<figure id="12303356" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/08/9c433e1e0bcbffb8f55edd4a5a327e00-450x458.jpg" alt="台湾的营所税申报6月底截止，年缴税冠军仍由台积电蝉联，贡献整体营所税一成。　" width="500" /><figcaption class="wp-caption-text">台湾的营所税申报6月底截止，年缴税冠军仍由台积电蝉联，贡献整体营所税一成。　（SAM YEH/AFP via Getty Images）</figcaption></figure>
-<p>另外，台湾的营所税申报6月底截止，年缴税冠军仍由台积电蝉联，贡献整体营所税一成，但自缴税额滑落至新台币300亿元左右，年减逾50亿元。北区国税局并未对外透露企业身份，对照公开财报资讯，可发现北区国税局缴税金额前两名，分别是台积电与鸿海。◇</p>
+<figure id="12303356" aria-describedby="caption-12303356" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/9c433e1e0bcbffb8f55edd4a5a327e00-450x458.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/08/9c433e1e0bcbffb8f55edd4a5a327e00-450x458.jpg" alt="台湾的营所税申报6月底截止，年缴税冠军仍由台积电蝉联，贡献整体营所税一成。　" width="500" /></a><figcaption id="caption-12303356" class="wp-caption-text">台湾的营所税申报6月底截止，年缴税冠军仍由台积电蝉联，贡献整体营所税一成。(SAM YEH/AFP via Getty Images)</figcaption></figure>
+<p>另外，台湾的营所税申报6月底截止，年缴税冠军仍由台积电蝉联，贡献整体营所税一成，但自缴税额滑落至新台币300亿元左右，年减逾50亿元。北区国税局并未对外透露企业身份，对照公开财报资讯，可发现北区国税局缴税金额前两名，分别是台积电与鸿海。◇#</p>
 <p>责任编辑：王愉悦</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/7/31/n12297635.md#1">台积电导入干式光罩洁净技术 创20亿元效益</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/1/n12300057.md#1">“戒急用忍”成就台积电 市值名列全球前十大</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/2/n12301032.md#1">台积电靠拢自由世界 避免人才遭中国挖角</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/2/n12301184.md#1">陆洗钱、拷贝文化 半导体产业难突破</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/2/n12301788.md#1">北京市投资中芯28奈米芯片 业界指凸显落后</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/3/n12303365.md#1">热钱涌入股汇双跌 新台币贬2.9分</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/3/n12303448.md#1">边境适度放松 张上淳：不应追求零确诊　</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/3/n12303358.md#1">立委涉贿 蔡英文警惕：升官发财请走别路</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/3/n12303317.md#1">蓝委再爆：五轻拆售案贱价卖出 要求检调侦办</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/3/n12303315.md#1">台教部续推奖学金培育博士生到剑桥留学 新增医疗补助</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/31/n12297635.md#1">台积电导入干式光罩洁净技术 创20亿元效益</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/1/n12300057.md#1">“戒急用忍”成就台积电 市值名列全球前十大</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/2/n12301032.md#1">学者：台积电靠拢自由世界 才能避人才被挖角</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/2/n12301184.md#1">大陆洗钱及拷贝文化 半导体产业难突破</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/2/n12301788.md#1">北京市投资中芯28奈米芯片 业界指凸显落后</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678778.md#1">台国安局长陈明通：乌俄冲突或长期化 边打边谈</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679384.md#1">接见美国民主基金会长 苏贞昌：全球民主伙伴团结合作</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678783.md#1">台国安局长：美将介入台海更深</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678844.md#1">18岁公民权绑大选 蓝营驳绝无打假球 质疑绿营双标</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679001.md#1">淘汰贪污涉赌议员 台公督盟提不适任指标</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/11/n11180153.md#1" target="_blank">【征文】章阁：中国古代专制吗（上）</a></li><li><a href="https://github.com/xdbxou357/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/4/n11633370.md#1" target="_blank">一趟印度之行 让她找到生命回归之路</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/14/n10143963.md#1" target="_blank">中共进入联合国与尼克松访华内幕（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/4/n9225929.md#1" target="_blank">对中国法轮功学员被迫害的调查（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/1/n12299836.md#1">不明中国种子美50州警告 部分品种揭晓</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/1/n12299531.md#1">传任志强坚持自辩 全部揽下涉案人员刑责</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/2/n12300366.md#1">【内幕】对中共了如指掌 美鹰派高招迭出</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/1/n12300013.md#1">吴嘉隆：美中南海或将开战 美意在保护台湾</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/7/30/n12295728.md#1">【独家】中共监控“流氓化”：家中偷窥你</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/7/31/n12298140.md#1">确诊四天终获送院 港顶级时装设计师喊救命</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/2/n12301758.md#1">录综艺节目累到脱妆 黄晓明真实相貌引热议</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/2/n12301702.md#1">景甜承认割双眼皮失败 直播中自嘲整成悲伤蛙</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/2/n12301510.md#1">唐嫣产后首次公开亮相 亲口澄清宝宝性别</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/7/31/n12298653.md#1">港立法会选举押后 林日曦斥林郑假扮温柔</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/7/31/n12297984.md#1">摇玲珑（一三一）</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/6/5/n12163904.md#1">【命理】危危欲坠的八字是怎样的？</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/7/30/n12293825.md#1">新的人生在兑现（3）天垂象 地成之</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/10/12/29/n3126257.md#1">巴洛克艺术（一）</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/7/27/n12285781.md#1">童话：大地的眼睛（四）猫头鹰的礼帽</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xdbxou357/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xdbxou357/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/3/n12303353.htm">台积电与美企紧密合作 外媒：美国将保护台湾</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/3/n12303353.htm">台积电与美企紧密合作 外媒：美国将保护台湾</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/xdbxou357/djy/blob/master/gb/20/8/3/n12303353.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xdbxou357/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xdbxou357/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xdbxou357/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/8/3/n12303353.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
